@@ -1,3 +1,8 @@
+2008-06-18  Sverker Nilsson  <sverker@sverker-laptop>
+
+	* guppy/doc/__init__.py (Tab): Added tabs for different help
+	browsing environments. 
+
 2008-06-17  Sverker Nilsson  <sverker@sverker-laptop>
 
 	* guppy/doc/__init__.py (_GLUECLAMP_.help_instance): Added
